[del] 未使用ファイル削除 [bug] ビルドエラーの原因になっていた未使用変数、その他を削除 [add] Readme用の画像追加

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -52,6 +52,8 @@
     "src/_lib/indentification",
     "src/_lib/Math",
     "src/_lib/obj",
+    "src/_lib/audio",
+    "src/_lib/ocr",
     "functions/**/*",
   ]
 }
